fixed horizontal scroll, fixed broken overlays by appending them to global-wrapper

--- a/css/experimental.css
+++ b/css/experimental.css
@@ -11,8 +11,8 @@ EXPERIMENTAL
 
 html,
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 #gallery li {
